# dayendar

./: .gitignore  .whitesource  CONTRIBUTING.md  Cargo.toml  DCO.txt  GENERATING_GPG_KEY.md  GOVERNANCE.md  LICENSE  Makefile.toml  OWNERS.md  README.md  ROLES.md  SECURITY.md  cobertura.xml  lcov.info  sonar-project.properties
.github/workflows/: coverage.yml  dev.yml  devskim.yml  flux.yml  rust.yml  semgrep.yml
bench/: calendar.rs  date_span.rs
examples/: abstract_calendar.rs  basic_usage.rs  date_span.rs  jhon_schedule.rs
fuzz/: Cargo.toml
src/: core.rs  generic.rs  lib.rs  main.rs  operations.rs
test/: dayscal_test.rs
tests/: qa_test.rs
