[package]
name = "dayendar"
version = "0.1.1"
edition = "2021"
authors = ["Raciel Hernández <kf5h6yu6@duck.com>"]
description = "Dayendar for advanced days calendar operations"
license = "Apache-2"
readme = "README.md"
keywords = ["scheduling", "calendar", "date"]
categories = ["data-structures"]

[dependencies]
itertools = "0.11.0"
time = {version="0.3.20", features=["macros"]}

[lib]
name = "dayendar"
path = "src/lib.rs"

[[test]]
name = "dayendar_test"
path = "tests/qa_test.rs"

[[bench]]
name = "calendar"
path = "bench/calendar.rs"
harness = false

[features]
testing = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.5.1"
grcov = "0.8.19"
