[package]
name = "dayendar"
version = "0.1.2"
edition = "2021"
authors = ["Raciel Hernández <kf5h6yu6@duck.com>"]
description = "Dayendar for advanced days calendar operations"
license = "Apache-2.0"
keywords = ["scheduling", "calendar", "date"]
categories = ["data-structures"]
#rust-version = "1.56"
repository = "https://github.com/racherb/dayendar"
documentation = "https://docs.rs/dayendar"
autoexamples = false # Disable automatic compilation and testing of examples

[dependencies]
itertools = "0.11.0"
time = {version="0.3.20", features=["macros"]}

[lib]
name = "dayendar"
path = "src/lib.rs"

[[test]]
name = "dayendar_test"
path = "tests/qa_test.rs"

[[bench]]
name = "calendar"
path = "bench/calendar.rs"
harness = false

[[bench]]
name = "date_span"
path = "bench/date_span.rs"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "jhon_schedule"
path = "examples/jhon_schedule.rs"

[[example]]
name = "abstract_calendar"
path = "examples/abstract_calendar.rs"

[[example]]
name = "date_span"
path = "examples/date_span.rs"


[profile.dev]
debug = true

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.5.1"
